<resources>

    <string name="app_name">FSG-Server</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FSG-Server</string>
    <string name="main_activity_button_1">JSON - Team</string>
    <string name="main_activity_button_2">JSON - Fahrer</string>
    <string name="main_activity_button_3">JSON - Event</string>
    <string name="main_activity_button_4">JSON - Geräte-Blacklist</string>
    <string name="main_activity_button_5">JSON - Bänder-Blacklist</string>

</resources>