<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:background="@color/light_grey"
        android:onClick="onButtonClick"
        android:text="@string/main_activity_button_3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_marginBottom="16dp"
        android:background="@color/light_grey"
        android:onClick="onButtonClick"
        android:text="@string/main_activity_button_2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginBottom="16dp"
        android:background="@color/light_grey"
        android:onClick="onButtonClick"
        android:text="@string/main_activity_button_1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginBottom="16dp"
        android:background="@color/light_grey"
        android:onClick="onButtonClick"
        android:text="@string/main_activity_button_4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:background="@color/light_grey"
        android:onClick="onButtonClick"
        android:text="@string/main_activity_button_5" />

</RelativeLayout>
